--- a/index.html
+++ b/index.html
@@ -9,18 +9,35 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
     <body>
-        <button type="button" class="btn btn-success">Success</button>
-        <nav class="navbar navbar-expand-lg navbar-light"></nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#">
-                <img src="img/blur-close-up-code-computer-546819.jpg" width="500px">
+                <img src="img/blur-close-up-code-computer-546819.jpg" width="50">
             </a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class= "nav-link" href="#">Quem somos</a>
-                </li>
-            </ul>       
-        </div>    
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class= "nav-link active"  href="#">Quem somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class= "nav-link" href="#">Contato</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class= "nav-link" href="#">Serviços</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class= "nav-link" href="#">Parceiros</a>
+                    </li>
+                </ul>    
+            </div>  
+            <button type="button" class="btn btn-success">Success</button>      
+        </nav>    
+        <button type="button" class="btn btn-success">Success</button>
+        <section id="quemsomos">
+            <div class="quemSomos container-fluid ">
+                <p>teste</p>
+            </div>
+        </section>
+
     </body>
     
 </html>
