--- a/index.html
+++ b/index.html
@@ -16,28 +16,62 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class= "nav-link active"  href="#">Quem somos</a>
+                        <a class= "nav-link active"  href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class= "nav-link" href="#">Contato</a>
+                        <a class= "nav-link" href="#contato">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class= "nav-link" href="#">Serviços</a>
+                        <a class= "nav-link" href="#serviços">Serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class= "nav-link" href="#">Parceiros</a>
+                        <a class= "nav-link" href="#parceiros">Parceiros</a>
                     </li>
                 </ul>    
             </div>  
             <button type="button" class="btn btn-success">Success</button>      
         </nav>    
-        <button type="button" class="btn btn-success">Success</button>
         <section id="quemsomos">
-            <div class="quemSomos container-fluid ">
-                <p>teste</p>
+            <div class="quemSomos container textoCentro">
+                <h3>Quem somos</h3>
+                <img src="img/people-coffee-meeting-team-7096.jpg" width="500" class="imgCentro">
+                <h5>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                     dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+                     officia deserunt mollit anim id est laborum."</h5>
             </div>
         </section>
-
+        <section id="contato">
+            <div class=" margin textoCentro container contato">
+                <h3>Contato</h3>
+                <img src="img/cellphone-cellular-communication-connection-263564.jpg" width="500" class="imgCentro">
+                <h5><a href="mailto:email@email.com">email@email.com</a><br>
+                    <a href="tel:(11)1111-1111">(11)1111-1111</a><br></h5>
+            </div>
+        </section>
+        <section id="serviços">
+            <div class="textoCentro container serviços">
+                <h3>Serviços</h3>
+                <img src="img/lighting-equipment-on-shelf-257904.jpg" width="500" class="imgCentro">
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+                    officia deserunt mollit anim id est laborum."</h5>
+            </div>
+        </section>
+        <section id="parceiros">
+            <div class="textoCentro container parceiros">
+                <h3>Parceiros</h3>
+                <img src="img/photography-of-people-shaking-hands-814544.jpg" width="500" class="imgCentro">
+                <h5>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                     dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+                     officia deserunt mollit anim id est laborum."</h5>
+            </div>
+        </section>
     </body>
     
 </html>
