--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="textoCentro container serviços">
                 <h3>Serviços</h3>
                 <img src="img/lighting-equipment-on-shelf-257904.jpg" width="500" class="imgCentro">
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                <h5 class="h5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                     dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
@@ -65,7 +65,20 @@
             <div class="textoCentro container parceiros">
                 <h3>Parceiros</h3>
                 <img src="img/photography-of-people-shaking-hands-814544.jpg" width="500" class="imgCentro">
-                <h5>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img src="img/índice.jpg" width="100%">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="img/índice.jpg" width="100%">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="img/índice.jpg" width="100%">
+                            </div>
+                        </div>
+                    </div c>
+                <h5 class="h5">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                      dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
