--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a class= "nav-link" href="#contato">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class= "nav-link" href="#serviços">Serviços</a>
+                        <a class= "nav-link" href="#servicos">Serviços</a>
                     </li>
                     <li class="nav-item">
                         <a class= "nav-link" href="#parceiros">Parceiros</a>
@@ -35,7 +35,7 @@
             <div class="quemSomos container textoCentro">
                 <h3>Quem somos</h3>
                 <img src="img/people-coffee-meeting-team-7096.jpg" width="500" class="imgCentro">
-                <h5>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                <h5 class="margin">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                      dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
@@ -50,28 +50,56 @@
                     <a href="tel:(11)1111-1111">(11)1111-1111</a><br></h5>
             </div>
         </section>
-        <section id="serviços">
-            <div class="textoCentro container serviços">
-                <h3>Serviços</h3>
+        <section id="servicos">
+            <div class="textoCentro container servicos">
+                <h3 class="margin">Serviços</h3>
                 <img src="img/lighting-equipment-on-shelf-257904.jpg" width="500" class="imgCentro">
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                <h5 class="margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                     dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
                     officia deserunt mollit anim id est laborum."</h5>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                    labore et dolore magna aliqua.</p>
+                                <img src="img/designer-monitor-screen-concept-965345.jpg" width="100%">
+                            </div>
+                            <div class="col-lg-6 img">
+                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                    labore et dolore magna aliqua.</p>
+                                <img src="img/black-and-silver-laptop-computer-on-round-brown-wooden-table-1181243.jpg" width="100%">
+                            </div>  
+                        </div>      
+                    </div>
             </div>
         </section>
         <section id="parceiros">
             <div class="textoCentro container parceiros">
-                <h3>Parceiros</h3>
+                <h3 class="margin">Parceiros</h3>
                 <img src="img/photography-of-people-shaking-hands-814544.jpg" width="500" class="imgCentro">
-                <h5>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                     dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-                     officia deserunt mollit anim id est laborum."</h5>
+                    <h5 class="margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+                        officia deserunt mollit anim id est laborum."</h5>
+                    <div class="container">
+                        <div class="row" class="margin">
+                            <div class="col-lg-4">                                
+                                <img src="img/clo lg 4.jfif" width="100%">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="img/clo lg 4.jfif" width="100%">
+                            </div>
+                            <div class="col-lg-4">
+                                <img src="img/clo lg 4.jfif" width="100%">
+                            </div>
+                        </div>
+                    </div>
             </div>
         </section>
     </body>
+    <footer class="container-fluid text-center bg-footer ">Desenvolvido por Jean Carvalho - 2020</footer>
     
 </html>
